# SV_OS

./: .dockerignore  .editorconfig  .env.example  .gitignore  .npmrc  .prettierignore  .prettierrc  CHANGELOG.md  Dockerfile.api  Dockerfile.web  LICENSE  README.md  SV-OS_v1.0_Release_Report.md  SV_OS_ARCHITECTURE_AUDIT.md  SV_OS_ARCHITECTURE_V1_FINAL.md  SV_OS_BUILD_ORDER.md  SV_OS_DEVELOPER_CHECKLIST.md  SV_OS_ENGINE_COMMUNICATION_MATRIX.md  SV_OS_ENGINE_DEPENDENCY_GRAPH.md  SV_OS_EPIC_BREAKDOWN.md  SV_OS_FILE_IMPLEMENTATION_SEQUENCE.md  SV_OS_IMPLEMENTATION_ROADMAP.md  SV_OS_IMPLEMENTATION_SPECIFICATION.md  SV_OS_INTERFACE_CONTRACTS.md  SV_OS_RELEASE_PLAN.md  SV_OS_REPOSITORY_BOOTSTRAP.md  SV_OS_SPRINT_PLAN.md  SV_OS_TASK_BREAKDOWN.md  SV_OS_TECHNICAL_DESIGN_SPECIFICATION.md  commitlint.config.js  computer_science_map.json  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.ai/: AI_CONTEXT.md  (+16 more)
apps/api/: .dockerignore  .env.example  CUsersvenugopalOneDriveDocumentsProjectsSV-OSappsapiruff_report.json  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_extensions.py  0002_initial_schema.py  0003_add_password_hash.py  0004_create_ai_chat_tables.py  0005_add_password_reset_tokens.py  0006_convert_enums_to_varchar_with_check.py
apps/api/app/: main.py
apps/api/tests/: conftest.py  test_engine_lifecycle.py  test_graph_platform.py  test_health.py  test_ms56_engines.py  test_ms7_platform.py  test_ms8_platform.py  test_platform_foundation.py
(+531 files in other folders)
